--- a/ldw-aula-02-mvc-controller/views/games.html
+++ b/ldw-aula-02-mvc-controller/views/games.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Games</title>
-</head>
-<body>
+    {% extends 'base.html' %}
+    {% block content %}
     <h1>Está é a página de Games</h1>
     <h3>Jogo em destaque:</h3>
     <ul>
@@ -26,8 +20,8 @@
     <hr>
     <form action="{{url_for('games')}}" method="POST">
         <label for="player">Jogador</label>
-        <input type="text" name="player">
-        <input type="submit" value="Entrar">
+        <input type="text" name="player" class="form-control w-50">
+        <input type="submit" value="Entrar" class="btn btn-success">
     </form>
     <hr>
 
@@ -38,5 +32,4 @@
         <p>{{value}}</p>
     </details>
     {% endfor %}
-</body>
-</html>
+    {% endblock content %}
