:wrench:feat: Troca o título da página de trivias.

--- a/exercicios/atividade-02/views/trivia.html
+++ b/exercicios/atividade-02/views/trivia.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2>Enigmas Misteriosos</h2>
+    <h2>Trivias Misteriosas</h2>
     <hr>
     <div class="row">
         {% for question in questions %}
